WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242951
REGRESSION(
252640@main
): [ macOS iOS15 ] TestWebKitAPI.WebKit.AlternativeServicesDefaultDirectoryCreation is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=242951
Summary
REGRESSION(252640@main): [ macOS iOS15 ] TestWebKitAPI.WebKit.AlternativeServ...
Hercules Hjalmarsson
Reported
2022-07-20 11:19:21 PDT
TestWebKitAPI.WebKit.AlternativeServicesDefaultDirectoryCreation Is a constant API failure on macOS and iOS15 on ToT and since
252640@main
. HISTORY:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit.AlternativeServicesDefaultDirectoryCreation
DIFF: 2022-07-20 09:43:50.152 com.apple.WebKit.WebContent.Development[83670:73812305] ApplePersistence=NO 2022-07-20 09:43:50.221 com.apple.WebKit.Networking.Development[83672:73812299] DiskCookieStorage changing policy from 2 to 0, cookie. 2022-07-20 09:43:50.253 com.apple.WebKit.WebContent.Development[83673:73812318] ApplePersistence=NO /Volumes/Data/worker/Apple-Monterey-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebsiteDataStoreCustomPaths.mm:390 Value of: [[NSFileManager defaultManager] fileExistsAtPath:defaultDirectory.path] Actual: false Expected: true DIFF URL:
https://build.webkit.org/#/builders/365/builds/5020/steps/18/logs/stdio
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-07-20 11:19:58 PDT
<
rdar://problem/97330417
>
Hercules Hjalmarsson
Comment 2
2022-07-20 11:22:52 PDT
I was able to bisect the failure on macOS to
252640@main
by running command: run-api-tests TestWebKitAPI.WebKit.AlternativeServicesDefaultDirectoryCreation
Sihui Liu
Comment 3
2022-07-20 13:04:28 PDT
Comment hidden (obsolete)
Pull request:
https://github.com/WebKit/WebKit/pull/2590
EWS
Comment 4
2022-07-20 21:20:31 PDT
Comment hidden (obsolete)
Committed
252681@main
(3da73044142a): <
https://commits.webkit.org/252681@main
> Reviewed commits have been landed. Closing PR #2590 and removing active labels.
Sihui Liu
Comment 5
2022-07-21 10:16:14 PDT
The bug is not fixed yet.
Sihui Liu
Comment 6
2022-07-21 10:18:59 PDT
252681@main
fixed
https://bugs.webkit.org/show_bug.cgi?id=242864
(
rdar://97205394
).
Sihui Liu
Comment 7
2022-07-21 10:23:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2620
EWS
Comment 8
2022-07-21 12:48:19 PDT
Committed
252699@main
(13e4866116a1): <
https://commits.webkit.org/252699@main
> Reviewed commits have been landed. Closing PR #2620 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug