Cherry-pick 13e4866116a1. rdar://problem/97330417

REGRESSION(252640@main): [ macOS iOS15 ] TestWebKitAPI.WebKit.AlternativeServicesDefaultDirectoryCreation is a constant failure
    https://bugs.webkit.org/show_bug.cgi?id=242951

    Reviewed by Chris Dumez.

    237210@main said we should create and resolve the directory no matter HTTP3 is enabled or not, so removing the condition
    to match that.

    * Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:
    (WebKit::WebsiteDataStore::resolveDirectoriesIfNecessary):

    Canonical link: https://commits.webkit.org/252699@main

Canonical link: https://commits.webkit.org/252432.66@safari-7614-branch